Correct partner block spacing.

--- a/src/assets/scss/_cruk-emails.scss
+++ b/src/assets/scss/_cruk-emails.scss
@@ -231,3 +231,9 @@ center {
     padding: 20px;
   }
 }
+
+.partner {
+  h3 {
+    margin-top: 0;
+  }
+}
